# gen/http/openapi3.yaml
@@ -21,8 +21,8 @@ paths:
                             $ref: '#/components/schemas/IssueRequestBody'
                         example:
                             user:
-                                password: Fuga vel omnis neque quas animi.
-                                username: Iusto ad officia vel.
+                                password: Nobis est sunt consectetur dolore et.
+                                username: Fugiat quos.
             responses:
                 "200":
                     description: OK response.
@@ -31,34 +31,22 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/TokenDetail'
                             example:
-                                access_token: Nihil id.
-                                expires_in: 4911383070041317927
-                                refresh_token: Non quidem.
-                                token_type: Culpa optio fugiat voluptatem accusantium.
+                                access_token: Cumque quia et cumque.
+                                expires_in: 9017755827570347603
+                                refresh_token: Et voluptatem.
+                                token_type: Quia aperiam tempore id.
                 "400":
-                    description: 'BadRequest: Bad Request response.'
+                    description: 'BadRequest: Bad Request'
                     content:
-                        application/json:
+                        application/vnd.goa.error:
                             schema:
-                                type: string
-                                example: Incidunt facere enim.
-                            example: Ut non repudiandae aut qui.
+                                $ref: '#/components/schemas/Error'
                 "401":
-                    description: 'Unauthorized: Unauthorized response.'
+                    description: 'Unauthorized: Unauthorized'
                     content:
-                        application/json:
+                        application/vnd.goa.error:
                             schema:
-                                type: string
-                                example: Et ex illum et.
-                            example: Quos ipsam.
-                "500":
-                    description: 'InternalServerError: Internal Server Error response.'
-                    content:
-                        application/json:
-                            schema:
-                                type: string
-                                example: Nesciunt et hic commodi et rem natus.
-                            example: Rerum voluptas quisquam suscipit aut voluptatem provident.
+                                $ref: '#/components/schemas/Error'
     /key-stone/auth/refresh:
         post:
             tags:
@@ -73,8 +61,8 @@ paths:
                             $ref: '#/components/schemas/RefreshRequestBody'
                         example:
                             token:
-                                access_token: Suscipit non ad adipisci accusamus.
-                                refresh_token: Praesentium dolore.
+                                access_token: Reiciendis blanditiis porro qui unde maiores reprehenderit.
+                                refresh_token: Qui in molestiae repellat voluptatem.
             responses:
                 "200":
                     description: OK response.
@@ -83,34 +71,22 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/TokenDetail'
                             example:
-                                access_token: Iste voluptatem voluptatibus aspernatur.
-                                expires_in: 425812748628239628
-                                refresh_token: Doloribus qui est alias consequatur illum ducimus.
-                                token_type: Odit in molestiae quos laborum illum.
+                                access_token: Iusto ad officia vel.
+                                expires_in: 7427244540271552702
+                                refresh_token: Id alias culpa optio fugiat voluptatem.
+                                token_type: Fuga vel omnis neque quas animi.
                 "400":
-                    description: 'BadRequest: Bad Request response.'
+                    description: 'BadRequest: Bad Request'
                     content:
-                        application/json:
+                        application/vnd.goa.error:
                             schema:
-                                type: string
-                                example: Beatae quibusdam omnis iste.
-                            example: Quod dignissimos deleniti molestiae deserunt sunt.
+                                $ref: '#/components/schemas/Error'
                 "401":
-                    description: 'Unauthorized: Unauthorized response.'
+                    description: 'Unauthorized: Unauthorized'
                     content:
-                        application/json:
+                        application/vnd.goa.error:
                             schema:
-                                type: string
-                                example: Numquam sed officiis.
-                            example: Aut qui sit.
-                "500":
-                    description: 'InternalServerError: Internal Server Error response.'
-                    content:
-                        application/json:
-                            schema:
-                                type: string
-                                example: Accusamus qui quam autem ullam impedit autem.
-                            example: Aut est quia et quia quia vel.
+                                $ref: '#/components/schemas/Error'
     /key-stone/users:
         post:
             tags:
@@ -134,21 +110,11 @@ paths:
                 "204":
                     description: No Content response.
                 "400":
-                    description: 'BadRequest: Bad Request response.'
+                    description: 'BadRequest: Bad Request'
                     content:
-                        application/json:
+                        application/vnd.goa.error:
                             schema:
-                                type: string
-                                example: Et ad.
-                            example: Corrupti aut saepe assumenda dicta velit.
-                "500":
-                    description: 'InternalServerError: Internal Server Error response.'
-                    content:
-                        application/json:
-                            schema:
-                                type: string
-                                example: Nihil corrupti dolorem quasi et ullam.
-                            example: Quo ut animi autem esse numquam.
+                                $ref: '#/components/schemas/Error'
     /key-stone/users/me:
         delete:
             tags:
@@ -159,21 +125,11 @@ paths:
                 "204":
                     description: No Content response.
                 "401":
-                    description: 'Unauthorized: Unauthorized response.'
+                    description: 'Unauthorized: Unauthorized'
                     content:
-                        application/json:
+                        application/vnd.goa.error:
                             schema:
-                                type: string
-                                example: Deleniti est dolore id ipsa vero ipsa.
-                            example: Occaecati dignissimos mollitia voluptatibus rem autem in.
-                "500":
-                    description: 'InternalServerError: Internal Server Error response.'
-                    content:
-                        application/json:
-                            schema:
-                                type: string
-                                example: Ipsam vitae nulla.
-                            example: Voluptatibus exercitationem.
+                                $ref: '#/components/schemas/Error'
 components:
     schemas:
         CreateRequestBody:
@@ -194,25 +150,67 @@ components:
                 Authorization:
                     type: string
                     description: The payload of the user
-                    example: Dolorem vel dolor deserunt.
+                    example: Cum sed saepe repudiandae aut.
             example:
-                Authorization: Non omnis.
+                Authorization: Numquam debitis rerum.
             required:
                 - Authorization
+        Error:
+            type: object
+            properties:
+                fault:
+                    type: boolean
+                    description: Is the error a server-side fault?
+                    example: false
+                id:
+                    type: string
+                    description: ID is a unique identifier for this particular occurrence of the problem.
+                    example: 123abc
+                message:
+                    type: string
+                    description: Message is a human-readable explanation specific to this occurrence of the problem.
+                    example: parameter 'p' must be an integer
+                name:
+                    type: string
+                    description: Name is the name of this class of errors.
+                    example: bad_request
+                temporary:
+                    type: boolean
+                    description: Is the error temporary?
+                    example: false
+                timeout:
+                    type: boolean
+                    description: Is the error a timeout?
+                    example: false
+            description: Bad Request
+            example:
+                fault: false
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
+                temporary: false
+                timeout: true
+            required:
+                - name
+                - id
+                - message
+                - temporary
+                - timeout
+                - fault
         IssueInput:
             type: object
             properties:
                 password:
                     type: string
                     description: The password of the user
-                    example: Quas architecto dolores autem earum.
+                    example: Laboriosam aut sint maiores rerum qui quos.
                 username:
                     type: string
                     description: The username of the user
-                    example: Unde officiis ipsam.
+                    example: Officiis est.
             example:
-                password: Vel adipisci aspernatur itaque ex cum mollitia.
-                username: Impedit sed quis.
+                password: Explicabo aliquam.
+                username: Facere nihil commodi ipsum.
             required:
                 - username
                 - password
@@ -223,22 +221,22 @@ components:
                     $ref: '#/components/schemas/IssueInput'
             example:
                 user:
-                    password: Fuga vel omnis neque quas animi.
-                    username: Iusto ad officia vel.
+                    password: Nobis est sunt consectetur dolore et.
+                    username: Fugiat quos.
         RefreshInput:
             type: object
             properties:
                 access_token:
                     type: string
                     description: The access token of the user
-                    example: Perferendis facilis architecto maxime.
+                    example: Aspernatur itaque ex cum mollitia.
                 refresh_token:
                     type: string
                     description: The refresh token of the user
-                    example: Amet commodi excepturi omnis sed dolorem.
+                    example: Voluptas rem dolorum excepturi ut.
             example:
-                access_token: Earum necessitatibus ab doloremque sint.
-                refresh_token: Architecto cupiditate est velit exercitationem.
+                access_token: Consequuntur voluptatem sint voluptatem.
+                refresh_token: Alias ad est delectus error quas minus.
             required:
                 - access_token
                 - refresh_token
@@ -249,56 +247,58 @@ components:
                     $ref: '#/components/schemas/RefreshInput'
             example:
                 token:
-                    access_token: Suscipit non ad adipisci accusamus.
-                    refresh_token: Praesentium dolore.
+                    access_token: Reiciendis blanditiis porro qui unde maiores reprehenderit.
+                    refresh_token: Qui in molestiae repellat voluptatem.
         TokenDetail:
             type: object
             properties:
                 access_token:
                     type: string
                     description: The access token of the user
-                    example: Voluptas rem dolorum excepturi ut.
+                    example: Excepturi est.
                 expires_in:
                     type: integer
                     description: The expires in of the user
-                    example: 1012213020241464064
+                    example: 6305677979173278738
                     format: int64
                 refresh_token:
                     type: string
                     description: The refresh token of the user
-                    example: Ad est.
+                    example: Vel dolor deserunt quia non omnis.
                 token_type:
                     type: string
                     description: The token type of the user
-                    example: Consequuntur voluptatem sint voluptatem.
+                    example: Et quis est dolor quis ea voluptatem.
             example:
-                access_token: Error quas.
-                expires_in: 5374604424148246911
-                refresh_token: Et provident porro harum.
-                token_type: Ut quia porro at reiciendis repudiandae ut.
+                access_token: Unde officiis ipsam.
+                expires_in: 9114112343225410739
+                refresh_token: Sed quis ut vel.
+                token_type: Quas architecto dolores autem earum.
         UserInput:
             type: object
             properties:
                 name:
                     type: string
                     description: The name of the user
-                    example: Velit voluptatem dolores sit magnam.
+                    example: Ut harum dolores quia aut dolorum ut.
                 password:
                     type: string
                     description: The password of the user
-                    example: Quam aut consequatur pariatur labore.
+                    example: Quidem quia.
                 payload:
                     type: object
                     description: The payload of the user
                     example:
-                        Aut nulla.: Autem quia cum sed saepe repudiandae.
+                        Eius consequatur repellendus.: Beatae consequatur.
+                        Totam voluptate et nihil maxime consequatur qui.: Excepturi rem ipsum earum quod commodi.
                     additionalProperties: true
             example:
-                name: A numquam debitis rerum sit officiis est.
-                password: Laboriosam aut sint maiores rerum qui quos.
+                name: Nostrum repellat placeat.
+                password: Autem excepturi tenetur.
                 payload:
-                    Excepturi est.: Et quis est dolor quis ea voluptatem.
-                    Nihil commodi ipsum.: Explicabo aliquam.
+                    Eaque commodi velit voluptatem dolores sit.: Dolores quam aut consequatur.
+                    Labore cum adipisci.: Nulla vel autem.
+                    Reprehenderit et qui expedita quis rerum.: Quae corrupti dolore iste iusto voluptas.
             required:
                 - name
                 - password
