# gen/http/token/server/encode_decode.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.22.2, DO NOT EDIT.
+// Code generated by goa v3.22.3, DO NOT EDIT.
 //
 // token HTTP server encoders and decoders
 //
@@ -70,26 +70,28 @@ func EncodeIssueError(encoder func(context.Context, http.ResponseWriter) goahttp
 		}
 		switch en.GoaErrorName() {
 		case "BadRequest":
-			var res token.BadRequest
+			var res *goa.ServiceError
 			errors.As(v, &res)
 			enc := encoder(ctx, w)
-			body := res
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewIssueBadRequestResponseBody(res)
+			}
 			w.Header().Set("goa-error", res.GoaErrorName())
 			w.WriteHeader(http.StatusBadRequest)
 			return enc.Encode(body)
-		case "InternalServerError":
-			var res token.InternalServerError
-			errors.As(v, &res)
-			enc := encoder(ctx, w)
-			body := res
-			w.Header().Set("goa-error", res.GoaErrorName())
-			w.WriteHeader(http.StatusInternalServerError)
-			return enc.Encode(body)
 		case "Unauthorized":
-			var res token.Unauthorized
+			var res *goa.ServiceError
 			errors.As(v, &res)
 			enc := encoder(ctx, w)
-			body := res
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewIssueUnauthorizedResponseBody(res)
+			}
 			w.Header().Set("goa-error", res.GoaErrorName())
 			w.WriteHeader(http.StatusUnauthorized)
 			return enc.Encode(body)
@@ -151,26 +153,28 @@ func EncodeRefreshError(encoder func(context.Context, http.ResponseWriter) goaht
 		}
 		switch en.GoaErrorName() {
 		case "BadRequest":
-			var res token.BadRequest
+			var res *goa.ServiceError
 			errors.As(v, &res)
 			enc := encoder(ctx, w)
-			body := res
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewRefreshBadRequestResponseBody(res)
+			}
 			w.Header().Set("goa-error", res.GoaErrorName())
 			w.WriteHeader(http.StatusBadRequest)
 			return enc.Encode(body)
-		case "InternalServerError":
-			var res token.InternalServerError
-			errors.As(v, &res)
-			enc := encoder(ctx, w)
-			body := res
-			w.Header().Set("goa-error", res.GoaErrorName())
-			w.WriteHeader(http.StatusInternalServerError)
-			return enc.Encode(body)
 		case "Unauthorized":
-			var res token.Unauthorized
+			var res *goa.ServiceError
 			errors.As(v, &res)
 			enc := encoder(ctx, w)
-			body := res
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewRefreshUnauthorizedResponseBody(res)
+			}
 			w.Header().Set("goa-error", res.GoaErrorName())
 			w.WriteHeader(http.StatusUnauthorized)
 			return enc.Encode(body)
