# gen/http/token/server/types.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.22.2, DO NOT EDIT.
+// Code generated by goa v3.22.3, DO NOT EDIT.
 //
 // token HTTP server types
 //
@@ -50,6 +50,78 @@ type RefreshResponseBody struct {
 	RefreshToken *string `form:"refresh_token,omitempty" json:"refresh_token,omitempty" xml:"refresh_token,omitempty"`
 }
 
+// IssueBadRequestResponseBody is the type of the "token" service "issue"
+// endpoint HTTP response body for the "BadRequest" error.
+type IssueBadRequestResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// IssueUnauthorizedResponseBody is the type of the "token" service "issue"
+// endpoint HTTP response body for the "Unauthorized" error.
+type IssueUnauthorizedResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// RefreshBadRequestResponseBody is the type of the "token" service "refresh"
+// endpoint HTTP response body for the "BadRequest" error.
+type RefreshBadRequestResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
+// RefreshUnauthorizedResponseBody is the type of the "token" service "refresh"
+// endpoint HTTP response body for the "Unauthorized" error.
+type RefreshUnauthorizedResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
+}
+
 // IssueInputRequestBody is used to define fields on request body types.
 type IssueInputRequestBody struct {
 	// The username of the user
@@ -86,6 +158,62 @@ func NewRefreshResponseBody(res *token.TokenDetail) *RefreshResponseBody {
 		TokenType:    res.TokenType,
 		ExpiresIn:    res.ExpiresIn,
 		RefreshToken: res.RefreshToken,
+	}
+	return body
+}
+
+// NewIssueBadRequestResponseBody builds the HTTP response body from the result
+// of the "issue" endpoint of the "token" service.
+func NewIssueBadRequestResponseBody(res *goa.ServiceError) *IssueBadRequestResponseBody {
+	body := &IssueBadRequestResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewIssueUnauthorizedResponseBody builds the HTTP response body from the
+// result of the "issue" endpoint of the "token" service.
+func NewIssueUnauthorizedResponseBody(res *goa.ServiceError) *IssueUnauthorizedResponseBody {
+	body := &IssueUnauthorizedResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewRefreshBadRequestResponseBody builds the HTTP response body from the
+// result of the "refresh" endpoint of the "token" service.
+func NewRefreshBadRequestResponseBody(res *goa.ServiceError) *RefreshBadRequestResponseBody {
+	body := &RefreshBadRequestResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
+	}
+	return body
+}
+
+// NewRefreshUnauthorizedResponseBody builds the HTTP response body from the
+// result of the "refresh" endpoint of the "token" service.
+func NewRefreshUnauthorizedResponseBody(res *goa.ServiceError) *RefreshUnauthorizedResponseBody {
+	body := &RefreshUnauthorizedResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
 	}
 	return body
 }
